--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<meta http-equiv="refresh" content="0; URL='http://discordguide.us'" />
+<! doctype html>
+<html>
+<head>
+    <title>Discord Guide</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://discordguide.us" />
+    <meta property="og:site_name" content="Discord Guide" />
+    <meta property="og:title" content="Guides for Discord" />
+    <meta property="og:description" content ="We are a community based service dedicated to helping you, our fellow Discord users with our Guide site and Support server.." />
+    <meta property="og:image" content="http://i.imgur.com/KWdqg3a.png" />
+    <meta http-equiv="refresh" content="0; URL='http://discordguide.us'" />
+</head>
+</html>
