--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <html>
 <head>
     <title>Discord Guide</title>
+    <meta charset=utf-8>
+    <meta content="IE=edge" http-equiv=X-UA-Compatible>
+    <meta content="width=device-width,initial-scale=1" name=viewport>
+    <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://discordguide.us" />
-    <meta property="og:site_name" content="Discord Guide" />
-    <meta property="og:title" content="Guides for Discord" />
-    <meta property="og:description" content ="We are a community based service dedicated to helping you, our fellow Discord users with our Guide site and Support server." />
+    <meta property="og:site_name" content="DiscordApp Support Guide" />
+    <meta property="og:title" content="Guides for Discord help and support" />
+    <meta property="og:description" content ="A site based resource providing comprehensive guides and reference material for DiscordApp. We provide 24/7 support at our support server and are here to answer any questions you may have!" />
     <meta property="og:image" content="http://i.imgur.com/KWdqg3a.png" />
+    <!-- Icon -->
+    <link href=assets/trans-logo.png rel="shortcut icon">
+    <!-- Extras -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/normal.css" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <meta http-equiv="window-target" content="_top">
+    <meta http-equiv="expires" content="-1">
+    <meta name="description" content="A site based resource providing comprehensive guides and reference material for DiscordApp. We provide 24/7 support at our support server and are here to answer any questions you may have!" />
+    <meta name="keywords" content="Discordapp, Discord, Support, Guide, Help, Videos, Wiki, Information, Resource, Hypesquad, Partners, Hammer and Chisel, Jet, Omni" />
+    <meta name="author" content="Guide Us">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="3 days">
     <meta http-equiv="refresh" content="0; URL='http://discordguide.us'" />
-</head>
+    <title>Discord Support Guide</title>
+    </head>
+<!-- discord, support, help → >
+
 </html>
