--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <meta name="revisit-after" content="3 days">
     <meta http-equiv="refresh" content="0; URL='http://discordguide.us'" />
     <title>Discord Support Guide</title>
+<!-- discord, support, help -->
     </head>
-<!-- discord, support, help → >
-
 </html>
