--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content ="A site based resource providing comprehensive guides and reference material for DiscordApp. We provide 24/7 support at our support server and are here to answer any questions you may have!" />
     <meta property="og:image" content="http://i.imgur.com/KWdqg3a.png" />
     <!-- Icon -->
-    <link href=assets/trans-logo.png rel="shortcut icon">
+    <link href=assets/trans-logo.png rel="http://i.imgur.com/KWdqg3a.png">
     <!-- Extras -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/normal.css" />
