--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1" name=viewport>
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://discordguide.us" />
+    <meta property="og:url" content="https://discord.guide" />
     <meta property="og:site_name" content="DiscordApp Support Guide" />
     <meta property="og:title" content="Guides for Discord help and support" />
     <meta property="og:description" content ="A site based resource providing comprehensive guides and reference material for DiscordApp. We provide 24/7 support at our support server and are here to answer any questions you may have!" />
@@ -24,7 +24,7 @@
     <meta name="author" content="Guide Us">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="3 days">
-    <meta http-equiv="refresh" content="0; URL='http://discordguide.us'" />
+    <meta http-equiv="refresh" content="0; URL='http://discord.guide'" />
     <title>Discord Support Guide</title>
 <!-- discord, support, help -->
     </head>
